--- a/f1_api_app/templates/f1_app.html
+++ b/f1_api_app/templates/f1_app.html
@@ -35,7 +35,7 @@ $(document).ready(function()
   
   $('.home_img').on("click", function(e){
 	  $(".modal-bg").show();
-	  window.location = "{% url 'base_url' %}"
+	  window.location = "{% url 'api_base_url' %}"
   });
 });
 </script>
