--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,77 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Theme Made By www.w3schools.com - No Copyright -->
+  <link rel="icon" href="{{STATIC_URL}}images/me.jpg" type="image/jpg">
   <title>Simply Me</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  <style>
-  body {
-      font: 20px Montserrat, sans-serif;
-      line-height: 1.8;
-      color: #f5f6f7;
-  }
-  p {font-size: 16px;}
-  .margin {margin-bottom: 45px;}
-  .bg-1 { 
-      background-color: #1abc9c; /* Green */
-      color: #ffffff;
-  }
-  .bg-2 { 
-      background-color: #474e5d; /* Dark Blue */
-      color: #ffffff;
-  }
-  .bg-3 { 
-      background-color: #ffffff; /* White */
-      color: #555555;
-  }
-  .bg-4 { 
-      background-color: #2f2f2f; /* Black Gray */
-      color: #fff;
-  }
-  .container-fluid {
-      padding-top: 70px;
-      padding-bottom: 70px;
-  }
-  .navbar {
-      padding-top: 15px;
-      padding-bottom: 15px;
-      border: 0;
-      border-radius: 0;
-      margin-bottom: 0;
-      font-size: 12px;
-      letter-spacing: 5px;
-  }
-  .navbar-nav  li a:hover {
-      color: #1abc9c !important;
-  }
-  .thumbnail img{
-    max-width: 100%; /* do not stretch the bootstrap column */
-}
-
-.img-wrapper{
-	width: 100%;
-	padding-bottom: 150%; /* your aspect ratio here! */
-	position: relative;
-}
-
-.img-wrapper img{
-	position: absolute;
-	top: 0; 
-	bottom: 0; 
-	left: 0; 
-	right: 0;
-	min-height: 100%; /* optional: if you want the smallest images to fill the .thumbnail */
-}
-  </style>
+  <link href="{{STATIC_URL}}css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="{{STATIC_URL}}css/homepage.css" rel="stylesheet" type="text/css">
+  <link href="{{STATIC_URL}}css/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <script  src="{{STATIC_URL}}js/jquery.min.js"></script>
+  <script  src="{{STATIC_URL}}js/bootstrap.min.js"></script>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="10">
-
 <!-- Navbar -->
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
