--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  {% block title_image %}
+  <link rel="icon" href="{{STATIC_URL}}images/home_image.png" type="image/png">
+  {% endblock title_image %}
   <title>{% block title %} FETCH API DATA {% endblock title %}</title>  
   {% block css %}
   <link href="{{STATIC_URL}}css/style.css" rel="stylesheet" type="text/css">
