--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,9 +1,9 @@
+  <meta charset="utf-8">
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <link rel="icon" href="{{STATIC_URL}}images/me.jpg" type="image/jpg">
   <title>Simply Me</title>
-  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="{{STATIC_URL}}css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="{{STATIC_URL}}css/homepage.css" rel="stylesheet" type="text/css">
@@ -65,7 +65,7 @@
             </div>
         </div>
         <div class="col-sm-4">
-           <p>I started twitter account for the sake of doing some project with tweets from Twitter. Learnt Django by playing with tweets</p>
+           <p>I started twitter account for the sake of doing some project with tweets from Twitter.</p>
             <div class="thumbnail">
                 <div class="img-wrapper">
       				<a href="https://www.twitter.com/suguvenk"><img src="{{STATIC_URL}}images/tw_img.png" class="img-responsive margin" alt="Image"></a>
