--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -32,7 +32,7 @@
 <div id="WHO" class="container-fluid bg-1 text-center">
   <h3 class="margin">Who Am I?</h3>
   <img src="{{STATIC_URL}}images/me.jpg" class="img-responsive img-circle margin" style="display:inline" alt="me" width="350" height="350">
-  <h3>I'm an Python/Django Developer</h3>
+  <h3>I'm a Python/Django Developer</h3>
 </div>
 
 <!-- Second Container -->
@@ -41,6 +41,12 @@
   <p>I had done some interesting Django Python projects. To see the code, please view into</p>
   <a href="https://github.com/SugumarVenkatesan/" class="btn btn-info btn-lg">
     <span class="fa fa-github"></span> My Github Account
+  </a>
+  <br>
+  <br>
+  <p>To see the current task in live</p>
+  <a href="{% url 'current_task' %}" class="btn btn-info btn-lg">
+    <span class="glyphicon glyphicon-link"></span> My Current Project/Task
   </a>
   <br>
   <br>
@@ -59,7 +65,7 @@
            <p>I am more in to the facebook sharing some interesting stuffs as per technical and non-technical too.</p>
             <div class="thumbnail">
                 <div class="img-wrapper">
-     			 <img src="{{STATIC_URL}}images/fb_img.jpg" class="img-responsive margin" alt="Image"></a>
+     			 <img src="{{STATIC_URL}}images/fb_img.jpg" class="img-responsive margin" alt="Facebook Image"></a>
                 </div>
                 <div class="caption text-center"><a href="https://www.facebook.com/aarya.sugumar"><i class="fa fa-facebook"></i> Let's become friends</a></div>
             </div>
@@ -68,7 +74,7 @@
            <p>I started twitter account for the sake of doing some project with tweets from Twitter.</p>
             <div class="thumbnail">
                 <div class="img-wrapper">
-      				<a href="https://www.twitter.com/suguvenk"><img src="{{STATIC_URL}}images/tw_img.png" class="img-responsive margin" alt="Image"></a>
+                  <img src="{{STATIC_URL}}images/tw_img.png" class="img-responsive margin" alt="Twitter Image"></a>
                 </div>
                 <div class="caption text-center"><a href="https://www.twitter.com/suguvenk"><i class="fa fa-twitter"></i> Let's become followers</a></div>
             </div>
