fixed navbar issue

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,4 +1,3 @@
-  <meta charset="utf-8">
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +10,7 @@
   <script  src="{{STATIC_URL}}js/jquery.min.js"></script>
   <script  src="{{STATIC_URL}}js/bootstrap.min.js"></script>
 </head>
-<body data-spy="scroll" data-target=".navbar" data-offset="10">
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
 <!-- Navbar -->
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
@@ -65,7 +64,7 @@
            <p>I am more in to the facebook sharing some interesting stuffs as per technical and non-technical too.</p>
             <div class="thumbnail">
                 <div class="img-wrapper">
-     			 <img src="{{STATIC_URL}}images/fb_img.jpg" class="img-responsive margin" alt="Facebook Image"></a>
+     			 <img src="{{STATIC_URL}}images/fb_img.jpg" class="img-responsive margin" alt="Facebook Image">
                 </div>
                 <div class="caption text-center"><a href="https://www.facebook.com/aarya.sugumar"><i class="fa fa-facebook"></i> Let's become friends</a></div>
             </div>
@@ -74,7 +73,7 @@
            <p>I started twitter account for the sake of doing some project with tweets from Twitter.</p>
             <div class="thumbnail">
                 <div class="img-wrapper">
-                  <img src="{{STATIC_URL}}images/tw_img.png" class="img-responsive margin" alt="Twitter Image"></a>
+                  <img src="{{STATIC_URL}}images/tw_img.png" class="img-responsive margin" alt="Twitter Image">
                 </div>
                 <div class="caption text-center"><a href="https://www.twitter.com/suguvenk"><i class="fa fa-twitter"></i> Let's become followers</a></div>
             </div>
