--- a/templates/test.html
+++ b/templates/test.html
@@ -97,10 +97,10 @@
         <div class="container-fluid">
           <p> <h2>Save your Identity details...</h2> </p>
           <p> Have an Account! </p>
-          <button type="button" data-toggle="modal" data-target = "#loginModal" class="btn btn-success btn-block"> Login </button>
+          <button type="button" data-toggle="modal" data-target = "#loginModal" class="btn btn-success btn-block"> <strong>Login</strong> </button>
           <br>
           <p> Don't have an Account? </p>
-          <button type="button" class="btn btn-danger btn-block"> please signup! </button>
+          <button type="button" class="btn btn-danger btn-block"> <strong><small>please</small> signup!</strong> </button>
           
         </div>
     </div>
@@ -139,6 +139,4 @@
 </div> 
   
 </body>
-<script type="text/javascript">
-</script>
 </html>
