--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -17,7 +17,7 @@
     <div class="navbar-header">
      <a class="navbar-brand" href="#WHO">Sugumar Venkatesan</a>
     </div>
-    <div class="navbar-collapse" id="myNavbar">
+    <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#WHO">WHO</a></li>
         <li><a href="#WHAT">WHAT</a></li>
