--- a/templates/test.html
+++ b/templates/test.html
@@ -7,7 +7,8 @@
   <script src="{{STATIC_URL}}js/bootstrap.min.js"></script>
   <style>
   .carousel-inner img {
-    width: 100%; /* Set width to 100% */
+    min-height: 100%;
+    min-width: 100%; /* Set width to 100% */
     margin: auto;
     opacity: 0.25;
     filter: alpha(opacity=60); /* For IE8 and earlier */
