--- a/templates/test.html
+++ b/templates/test.html
@@ -8,7 +8,7 @@
   <style>
   .carousel-inner img {
     min-height: 100%;
-    min-width: 100%; /* Set width to 100% */
+    width: 100%; /* Set width to 100% */
     margin: auto;
     opacity: 0.25;
     filter: alpha(opacity=60); /* For IE8 and earlier */
@@ -39,7 +39,12 @@
 	color: white ! important;
 	}
 	
-	
+	.carousel,.item,.active{
+   height:100%;
+ }
+.carousel-inner{
+    height:100%;
+}
 	@media (max-width: 600px) {
     .carousel-caption p {
         display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
@@ -152,6 +157,11 @@
   </div>
   </div>
 </div> 
-  
 </body>
+<script type="text/javascript">
+$(document).ready(function(){
+	   var height = $(window).height();  //getting windows height
+	   jQuery('#myCarousel').css('height',height+'px');   //and setting height of carousel
+	});
+</script>
 </html>
