--- a/templates/test.html
+++ b/templates/test.html
@@ -81,6 +81,10 @@
 	  position: absolute;
 	  top: 50%;
 	  left:50%;
+	  -ms-transform: translate(-50%,-50%);
+	  -webkit-transform: translate(-50%,-50%);
+      -moz-transform: translate(-50%,-50%);
+	  -o-transform: translate(-50%,-50%);
 	  transform: translate(-50%,-50%);
 	  border-radius: 30px !important;
 	  border: 3px solid #C1E1A6;
