modal design changes

--- a/f1_api_app/static/css/id_homepage.css
+++ b/f1_api_app/static/css/id_homepage.css
@@ -88,6 +88,7 @@
 	  top: 50%;
 	  left:50%;
 	  bottom: auto;
+	  right:auto;
 	  -ms-transform: translate(-50%,-50%);
 	  -webkit-transform: translate(-50%,-50%);
       -moz-transform: translate(-50%,-50%);
