setting up different databases for production and development

--- a/templates/id_homepage.html
+++ b/templates/id_homepage.html
@@ -63,7 +63,9 @@
     
     
 	      <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal">&times;</button>
+	        <button type="button" class="close" data-dismiss="modal">
+	        <span class="batch fa fa-times-circle-o fa-2x" style="color:#000000;"></span>
+	        </button>
 	        <h4><span class="glyphicon glyphicon-log-in"></span> Login</h4>
 	      </div>
 	      
