--- a/identity_app/templates/registration.html
+++ b/identity_app/templates/registration.html
@@ -7,7 +7,7 @@
     
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal">
-	        <span class="fa fa-times-circle-o fa-lg"> Close</span>
+	        <span class="batch fa fa-times-circle-o fa-2x" style="color:#000000;"></span>
 	        </button>
 	        <h4><span class="fa fa-user-plus"></span>Sign Up</h4>
 	      </div>
