Changed loading design

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,13 +47,8 @@
   {% endblock form %}
   {% block load %}
   <div class="modal-bg" style="display:none; background:black;opacity:0.6;">
-	  <div class="loading">
-	       <div class="progress">
-  			<div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar"
-  				aria-valuenow="100" style="width:100%;background-color:#28c101;">
-   				<p class="text-center">Loading...Please wait...</p>
-            </div>
-		  </div>
+	   <div class="loading">
+	      <p> <h1><span><i class="glyphicon glyphicon-refresh glyphicon-spin"></i></span></h1> </p>
 	  </div>
   </div>
   {% endblock load %}
