--- a/f1_api_app/static/css/id_homepage.css
+++ b/f1_api_app/static/css/id_homepage.css
@@ -92,7 +92,7 @@
 	  -webkit-transform: translate(-50%,-50%);
       -moz-transform: translate(-50%,-50%);
 	  -o-transform: translate(-50%,-50%);
-	  transform: translate(-50%,-50%);	
+	  transform: translate(-50%,-50%);
 	}
 	
 	
@@ -109,4 +109,28 @@
 	  transform: translate(-50%,-50%);
 	}
 
-    
+    .glyphicon-spin {
+  -webkit-animation: spin 1000ms infinite linear;
+   animation: spin 1000ms infinite linear;
+  }
+  
+  @-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
+  }
+ }
+
+ @keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
+ }
