--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,12 @@
 	  $('#api_data_form').submit();
 	  }
 	 });
+	 
+	 $(".test_fb_div a").click(function() {
+		 $(".modal-bg").show();
+	
+	 });
+	 
   });
   </script>
   </head>
