"changed jquery onclick"

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,9 +31,8 @@
 	  }
 	 });
 	 
-	 $(".test_fb_div a").click(function() {
+	 $(".test_fb_div a").on('click',function(e) {
 		 $(".modal-bg").show();
-	
 	 });
 	 
   });
