--- a/identity_app/templates/registration.html
+++ b/identity_app/templates/registration.html
@@ -4,7 +4,6 @@
     	<!-- Modal content-->
     	<div class="modal-content">
     
-    
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal">
 	        <span class="batch fa fa-times-circle-o fa-2x" style="color:#000000;"></span>
@@ -13,26 +12,31 @@
 	      </div>
 	      
 	      <div class="modal-body">
-	        <form role="form">
+	        <form role="form" action="{% url 'register' %}" method="post">{% csrf_token %}
 	          <div class="form-group">
 	            <label for="firstname"><span class="glyphicon glyphicon-user"></span> Firstname</label>
-	            <input type="text" class="form-control" id="username" placeholder="username">
+	            {{ form.first_name }}
+	            <!-- <input type="text" class="form-control" id="username" placeholder="username"> -->
 	          </div>
 	           <div class="form-group">
 	            <label for="lastname"><span class="glyphicon glyphicon-user"></span> Lastname</label>
-	            <input type="text" class="form-control" id="username" placeholder="username">
+	            {{ form.last_name }}
+	            <!-- <input type="text" class="form-control" id="username" placeholder="username"> -->
 	          </div>
 	           <div class="form-group">
 	            <label for="username"><span class="glyphicon glyphicon-user"></span> Username</label>
-	            <input type="text" class="form-control" id="username" placeholder="username">
+	            {{ form.username }}
+	            <!-- <input type="text" class="form-control" id="username" placeholder="username"> -->
 	          </div>
 	          <div class="form-group">
 	            <label for="password1"><span class="fa fa-key"></span> Password1</label>
-	            <input type="password1" class="form-control" id="password1" placeholder="password">
+	            {{ form.password1 }}
+	            <!-- <input type="password1" class="form-control" id="password1" placeholder="password"> -->
 	          </div>
 	          <div class="form-group">
 	            <label for="password2"><span class="fa fa-key"></span> Password2</label>
-	            <input type="password2" class="form-control" id="password2" placeholder="password">
+	            {{ form.password2 }}
+	            <!-- <input type="password2" class="form-control" id="password2" placeholder="password"> -->
 	          </div>
 	          <button type="submit" class="btn btn-block btn-success">Sign Up
 	            <span class="fa fa-user-plus"></span>
