--- a/fetch_api_data/mystatic/css/style.css
+++ b/fetch_api_data/mystatic/css/style.css
@@ -39,8 +39,8 @@ html, body, h1
 .modal-bg 
 {
     position: fixed;
-    height: 100%;
-    width: 100%;
+    min-height: 100%;
+    min-width: 100%;
     z-index: 9999;
     top: 0;
     left: 0;
