--- a/identity_app/templates/id_homepage.html
+++ b/identity_app/templates/id_homepage.html
@@ -1,8 +1,9 @@
-  <link href="{{STATIC_URL}}css/font-awesome.min.css" rel="stylesheet" type="text/css">
-<html>
+{% load djangular_tags %}
 <head>
+<html ng-app = "djangular-demo">
   <link href="{{STATIC_URL}}css/style.css" rel="stylesheet" type="text/css">
   <link href="{{STATIC_URL}}css/id_homepage.css" rel="stylesheet" type="text/css">
+  <link href="{{STATIC_URL}}css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="{{STATIC_URL}}css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <script src="{{STATIC_URL}}js/jquery.min.js"></script>
   <script src="{{STATIC_URL}}js/bootstrap.min.js"></script>
@@ -48,10 +49,10 @@
 	  <div class="jumbotron">
 	      <p> <h2>Save your Identity details...</h2> </p>
           <p> Have an Account! </p>
-          <button type="button" data-toggle="modal" data-target = "#loginModal" class="btn btn-success btn-block"> <strong><h3>Log In</h3></strong> </button>
+          <button type="button" id="login-btn" data-toggle="modal" data-target = "#loginModal" class="btn btn-success btn-block"> <strong><h3>Log In</h3></strong> </button>
           <br>
           <p> Don't have an Account? </p>
-          <button type="button" data-toggle="modal" data-target = "#SignupModal" class="btn btn-danger btn-block"> <strong><h3>Sign Up</h3></strong> </button>
+          <button type="button" id="signup-btn" class="btn btn-danger btn-block"> <strong><h3>Sign Up</h3></strong> </button>
 	  </div>
 	</div>
 	
@@ -101,8 +102,46 @@
   {% include "registration.html" %}
 </div> 
 </body>
-
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}djangular/js/ng-django-forms.js" type="text/javascript"></script>
 <script type="text/javascript">
+$(document).ready(function()
+ {
+     $('#myCarousel').carousel({
+         pause: "false"
+     });
+     $('#signup-btn').on("click", function(e){
+         $('#myCarousel').carousel('pause');
+         $('#SignupModal').modal('show');
+         $('.djng-field-errors li').hide();
+     });
+     $('.modal-close').on("click", function(e){
+    	 $('#SignupModal').modal('hide')
+         $('#myCarousel').carousel('cycle');
+     });
+     
+   
+});
+	var my_app = angular.module('djangular-demo', ['ng.django.forms']);
+	my_app.config(function($httpProvider) {
+		$httpProvider.defaults.headers.common['X-Requested-With'] = 'XMLHttpRequest';
+		$httpProvider.defaults.headers.common['X-CSRFToken'] = '{% csrf_value %}';
+	});
+	angular.module('djangular-demo').controller('MyFormCtrl', function($scope, $http, $window, djangoForm) {
+		$scope.submit = function() {
+			if ($scope.subscribe_data) {
+				$http.post("{% url 'register' %}", $scope.subscribe_data).success(function(out_data) {
+					$('.djng-field-errors li').show();
+					if (!djangoForm.setErrors($scope.my_form, out_data.errors)) {
+						// on successful post, redirect onto success page
+						$window.location.href = out_data.success_url;
+					}
+				}).error(function() {
+					console.error('An error occured during submission');
+				});
+			}
+			return false;
+		};
+	});
  </script>
-
 </html>
