--- a/identity_app/templates/registration.html
+++ b/identity_app/templates/registration.html
@@ -1,17 +1,17 @@
 <div class="modal fade row" id="SignupModal" role="dialog">
-  	  <div class="col-md-12 modal-dialog">
+  	  <div class="col-sm-12 modal-dialog">
 
     	<!-- Modal content-->
     	<div class="modal-content">
     
-	      <div class="col-md-12 modal-header">
+	      <div class="col-sm-12 modal-header">
 	        <button type="button" class="close modal-close">
 	        <span class="batch fa fa-times-circle-o fa-2x" style="color:#000000;"></span>
 	        </button>
 	        <h4><span class="fa fa-user-plus"></span>Sign Up</h4>
 	      </div>
 	      
-	      <div class="modal-body col-md-12">
+	      <div class="modal-body col-sm-12">
 	        <form role="form" name={{form.form_name}} action="{% url 'register' %}" method="post" validate ng-controller="MyFormCtrl">{% csrf_token %}
 	           <div class="form-group">
 	            <label for="username"><span class="glyphicon glyphicon-user"></span> Username <span class="pull-right text-danger">{{ form.username.errors }}</span></label>
