--- a/identity_app/templates/id_homepage.html
+++ b/identity_app/templates/id_homepage.html
@@ -5,8 +5,11 @@
   <link href="{{STATIC_URL}}css/id_homepage.css" rel="stylesheet" type="text/css">
   <link href="{{STATIC_URL}}css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="{{STATIC_URL}}css/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <link href="{{STATIC_URL}}css/bootstrap-dialog.css" rel="stylesheet" type="text/css">
   <script src="{{STATIC_URL}}js/jquery.min.js"></script>
   <script src="{{STATIC_URL}}js/bootstrap.min.js"></script>
+  <script src="{{STATIC_URL}}js/bootstrap-dialog.js"></script>
+  
 </head>
 <body>
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -44,71 +47,35 @@
   </div>
 <div class="modal-bg">
 
-{% if messages %}
-{% for message in messages %}
-    <div class="alert alert-info text-center fade in">
-    <button class="batch fa fa-times-circle-o fa-2x" style="color:#000000;" data-dismiss="alert" aria-label="close">
-    </button>
-    <p class="text-center">{{ message }}</p>
-    </div>
-{% endfor %}
-{% endif %}
-
-	<div class="container theme-showcase" role="main">
-	  <div class="jumbotron">
+<div class="container theme-showcase" role="main">
+  <div class="jumbotron">
 	      <p> <h2>Save your Identity details...</h2> </p>
           <p> Have an Account! </p>
-          <button type="button" id="login-btn" data-toggle="modal" data-target = "#loginModal" class="btn btn-success btn-block"> <strong><h3>Log In</h3></strong> </button>
+          <button type="button" id="login-btn" class="btn btn-success btn-block"> <strong><h3>Log In</h3></strong> </button>
           <br>
           <p> Don't have an Account? </p>
           <button type="button" id="signup-btn" class="btn btn-danger btn-block"> <strong><h3>Sign Up</h3></strong> </button>
-	  </div>
-	</div>
-	
-    <div class="modal fade" id="loginModal" role="dialog">
-  	  <div class="modal-dialog">
-
-    	<!-- Modal content-->
-    	<div class="modal-content">
+  </div>
+</div>
+    {% include "login.html" %}
+    {% include "registration.html" %}
     
-    
-	      <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal">
+  <!-- Modal -->
+  <div class="modal fade" id="messageModal" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header" id="message-head">
+	        <button type="button" class="close modal-close" data-dismiss="modal">
 	        <span class="batch fa fa-times-circle-o fa-2x" style="color:#000000;"></span>
 	        </button>
-	        <h4><span class="glyphicon glyphicon-log-in"></span> Login</h4>
+	        <h4 id="message-title"></h4>
 	      </div>
-	      
-	      
-	      <div class="modal-body">
-	        <form role="form">
-	          <div class="form-group">
-	            <label for="username"><span class="glyphicon glyphicon-user"></span> Username</label>
-	            <input type="text" class="form-control" id="username" placeholder="username">
-	          </div>
-	          <div class="form-group">
-	            <label for="password"><span class="fa fa-key"></span>Password</label>
-	            <input type="password" class="form-control" id="password" placeholder="password">
-	          </div>
-	          <button type="submit" class="btn btn-block btn-success">Login
-	            <span class="glyphicon glyphicon-log-in"></span>
-	          </button>
-	        </form>
-	      </div>
-	 
-	 
-	      <div class="modal-footer">
-	        <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal">
-	          <span class="glyphicon glyphicon-remove"></span> Cancel
-	        </button>
-	      </div>
-	 
-   		</div>
-   
-  	</div>
+        <div class="modal-body">
+         <h5 id="message-content"></</h5>
+        </div>
+      </div>
+    </div>
   </div>
-  
-  {% include "registration.html" %}
 </div> 
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.js" type="text/javascript"></script>
@@ -124,12 +91,14 @@ $(document).ready(function()
          $('#SignupModal').modal('show');
          $('.djng-field-errors li').hide();
      });
-     $('.modal-close').on("click", function(e){
-    	 $('#SignupModal').modal('hide')
-         $('#myCarousel').carousel('cycle');
+     $('#login-btn').on("click", function(e){
+         $('#myCarousel').carousel('pause');
+         $('#loginModal').modal('show');
+         $('.djng-field-errors li').hide();
+         $('.djng-form-errors li').hide();
      });
+         
      
-   
 });
 	var my_app = angular.module('djangular-demo', ['ng.django.forms']);
 	my_app.config(function($httpProvider) {
@@ -143,13 +112,60 @@ $(document).ready(function()
 					$('.djng-field-errors li').show();
 					if (!djangoForm.setErrors($scope.my_form, out_data.errors)) {
 						// on successful post, redirect onto success page
-						$window.location.href = out_data.success_url;
+						//$window.location.href = out_data.success_url;
+						if (out_data.success)
+							{
+							$scope.subscribe_data = {}
+							$('#SignupModal').modal('hide');
+							$('#message-title').html('<span class="glyphicon glyphicon-thumbs-up"></span>' + ' Success');
+							$('#message-content').addClass('text-success')
+							$('#message-content').html('<span class="glyphicon glyphicon-ok fa-3x"></span>&nbsp;&nbsp;' + out_data.success);
+							$('#messageModal').modal('show');
+							setTimeout(function(){
+						        $("#messageModal").modal('hide');
+						    }, 3000);
+							}
+						
 					}
 				}).error(function() {
 					console.error('An error occured during submission');
 				});
 			}
 			return false;
+		};
+		$scope.signup_form_reset = function(){
+			if ($scope.subscribe_data) {
+            $scope.subscribe_data = {}
+			}
+			$('#SignupModal').modal('hide')
+	    	$('#myCarousel').carousel('cycle');
+            return false;
+		};
+	});
+	angular.module('djangular-demo').controller('MyLoginFormCtrl', function($scope, $http, $window, djangoForm) {
+		$scope.login_submit = function() {
+			if ($scope.login_data) {
+				$http.post("{% url 'login' %}", $scope.login_data).success(function(out_data) {
+					$('.djng-field-errors li').show();
+					$('.djng-form-errors li').show();
+					if (!djangoForm.setErrors($scope.login_form, out_data.errors)) {
+						// on successful post, redirect onto success page
+						//$window.location.href = out_data.success_url
+						
+					}
+				}).error(function() {
+					console.error('An error occured during submission');
+				});
+			}
+			return false;
+		};
+		$scope.login_form_reset = function(){
+			if ($scope.login_data) {
+            $scope.login_data = {}
+			}
+	    	$('#loginModal').modal('hide')
+	    	$('#myCarousel').carousel('cycle');
+            return false;
 		};
 	});
  </script>
